--- a/AppResQnow/app/src/main/res/values/strings.xml
+++ b/AppResQnow/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ResQnow</string>
-    <string name="default_web_client_id"></string>
+    <string name="default_web_client_id">852336046287-bcop8t4bv02r7m1n6i4nb33ugr84tu5q.apps.googleusercontent.com</string>
 </resources>
