--- a/AppResQnow/app/src/main/res/values/strings.xml
+++ b/AppResQnow/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">ResQnow</string>
+//Google
     <string name="default_web_client_id">852336046287-bcop8t4bv02r7m1n6i4nb33ugr84tu5q.apps.googleusercontent.com</string>
+//Facebook
+    <string name="facebook_app_id">1033015038722708</string>
+    <string name="fb_login_protocol_scheme">fb1033015038722708</string>
+    <string name="facebook_client_token">56789</string>
+
+
 </resources>
